# financial_ai_agent

./: .gitignore  README.md  llama-3.2-1b-finetune-ner.ipynb  pyproject.toml  requirements.txt
data/json/: 01e82e04ef.json  026e2bad67.json  032a1b19f8.json  0690985bf3.json  06e89218bf.json  06ed87a587.json  0938c33705.json  097b08231d.json  0ac4dc50b2.json  0bd9422619.json  0c71042c13.json  0ca9149be8.json  0e3198c55a.json  0f5542930d.json  10556c2481.json  105efd6d16.json  1165709f5c.json  11f50ffcbf.json  12c0cc59b5.json  130e879f3d.json  13feca640b.json  14dccf003e.json  152c9618b1.json  158b9a4d97.json  1627d2407c.json  16a7ba0240.json  1894379156.json  191437ecd0.json  1c4c6c5163.json  1cbec14136.json  1cebb0c8eb.json  1cfe849438.json  1f9a2f7f3f.json  20da8111e3.json  21cf7c1beb.json  23c138f08a.json  2403aabe92.json  25371244cd.json  253b56c513.json  284ae989de.json  (+197 more)
data/text/: 01e82e04ef.txt  026e2bad67.txt  0690985bf3.txt  06e89218bf.txt  06ed87a587.txt  097b08231d.txt  0ac4dc50b2.txt  0c71042c13.txt  0ca9149be8.txt  0e3198c55a.txt  0f5542930d.txt  10556c2481.txt  105efd6d16.txt  1165709f5c.txt  11f50ffcbf.txt  12c0cc59b5.txt  130e879f3d.txt  14dccf003e.txt  152c9618b1.txt  158b9a4d97.txt  1627d2407c.txt  16a7ba0240.txt  1894379156.txt  191437ecd0.txt  1c4c6c5163.txt  1cbec14136.txt  1cebb0c8eb.txt  1cfe849438.txt  1f9a2f7f3f.txt  20da8111e3.txt  21cf7c1beb.txt  23c138f08a.txt  2403aabe92.txt  25371244cd.txt  253b56c513.txt  284ae989de.txt  286023d55b.txt  29198088c6.txt  2b9b02d1ba.txt  2cf9f8e7d5.txt  (+171 more)
financial_ai_agent/: pyproject.toml  steramlit_app.py
(+9 files in other folders)
