[tool.poetry]
name = "financial_ai_agent"
version = "0.1.0"
description = "Your project description"
authors = ["Arpan Ghosh <iamarpanghosh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
gnews = "0.4.1"
newspaper3k = "0.2.8"
pymongo = "4.12.0"
lxml_html_clean = "0.4.1"
langchain_google_genai = "2.1.2"
pydantic = "2.11.3"
langchain = "0.3.23"
langgraph = "0.3.27"
langchain_community = "0.3.21"
crawl4ai = "0.5.0"
selenium = "4.31.0"
cloudscraper = "1.2.71"
dateparser = "1.2.1"
newsdataapi = "0.1.21"
astrapy = "2.0.1"
sentence_transformers = "4.0.2"
pyyaml = "^6.0.1"
jupyter = "^1.1.1"
notebook = "^7.4.0"
langchain-astradb = "^0.6.0"
streamlit = "^1.44.1"
unsloth = "2025.3.19"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
coverage = "^7.6.1"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
